gdnative/tests/ui/from_variant_fail_04.stderr
error: String expected, wrap with double quotes.
 --> $DIR/from_variant_fail_04.rs:6:22
  |
6 |     #[variant(with = path)]
  |                      ^^^^
